Fix z-index of top bottom and change pxs to ems for cross platform and zooming support

--- a/css/style.css
+++ b/css/style.css
@@ -83,7 +83,8 @@
   text-align: center;
   border-radius: 100%;
   opacity: .35;
-  padding: 9px 14px;
+  padding: 0.5625em 0.875em;
+  z-index: 1000;
 }
 
 #top_button:hover {
